# grid_map_geo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  annotated.html  classGridMapGeo-members.html  classGridMapGeo.html  classMapPublisher-members.html  classMapPublisher.html  classes.html  dependencies.rosinstall  dir_13e138d54eb8818da29c3992edef070a.html  dir_23c3ed1ccbaeabb0ccfc1deb00bb4077.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_81025302fd592f43a2d7c4fbb7eea7b8.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  grid__map__geo_8hpp_source.html  hierarchy.html  index.html  package.xml  structLocation-members.html  structLocation.html  transform_8hpp_source.html
.github/workflows/: build_test.yml  check_style.yml  doxygen.yml  doxygen_build.yml  doxygen_deploy.yml
Tools/: configure.sh  fix_code_style.sh
config/: sargans_color_over_srtm1.yaml
grid_map_geo/: CMakeLists.txt  package.xml
grid_map_geo/include/grid_map_geo/: grid_map_geo.h
grid_map_geo/launch/: load_tif.launch  run_terrain_loader.launch  terrain_loader.rviz
grid_map_geo/src/: grid_map_geo.cpp  terrain_loader.cpp  test_tif_loader.cpp
grid_map_geo_msgs/: CMakeLists.txt  package.xml
grid_map_geo_msgs/msg/: GeographicMapInfo.msg
include/grid_map_geo/: grid_map_geo.h  grid_map_geo.hpp  transform.h  transform.hpp
launch/: config.rviz  load_map_publisher.launch.py  load_map_publisher_launch.xml  load_multiple_tif.launch  load_multiple_tif_launch.xml  load_shp.launch  load_srtmhgt_launch.xml  load_tif.launch  load_tif.launch.py  load_tif_launch.xml  load_vrt_launch.xml  run.launch.py
resources/: LDB_Davos_2122.dbf  LDB_Davos_2122.sbn  LDB_Davos_2122.sbx  LDB_Davos_2122.shp  LDB_Davos_2122.shp.xml  LDB_Davos_2122.shx  sertig_valley.tif  sertig_valley_color.tif
rviz/: config.rviz  multi_config.rviz
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
src/: CMakeLists.txt  grid_map_geo.cpp  map_publisher.cpp  test_shp_loader.cpp  test_tif_loader.cpp  transform.cpp
test/: CMakeLists.txt  test_grid_map_geo.cpp
test/export/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  test_grid_map_geo.cpp
