<package>
  <name>grid_map_geo</name>
  <version>0.0.1</version>
  <description>Georeferenced grid map</description>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>

  <author>Jaeyoung Lim</author>

  <license>BSD-3</license>

  <url type="website">https://github.com/Jaeyoung-Lim/grid_map_geo</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/grid_map_geo/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>grid_map_core</build_depend>
  <run_depend>eigen_catkin</run_depend>
  <export>
  </export>
</package>
