<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grid_map_geo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jalim@ethz.ch">jaeyoung</maintainer>
  <license>TODO: License declaration</license>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>
  <maintainer email="ryanfriedman5410+github@gmail.com">Ryan Friedman</maintainer>

  <author>Jaeyoung Lim</author>

  <license>BSD-3</license>

  <url type="website">https://github.com/Jaeyoung-Lim/grid_map_geo</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/grid_map_geo/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>colcon</buildtool_depend>
  <depend>eigen</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
